[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/smoker/smoker_clicked.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/smoker/smoker_norm.png" type="Texture" id=3]
[ext_resource path="res://master/src/main.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/themes/main.tres" type="Theme" id=6]
[ext_resource path="res://assets/themes/button_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/themes/button_hoveer.tres" type="StyleBox" id=8]
[ext_resource path="res://master/src/autoSmoker.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="main" type="Node2D"]
script = ExtResource( 4 )

[node name="main" type="CanvasLayer" parent="."]

[node name="background" type="Sprite" parent="main"]
position = Vector2( 640, 360 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="currentHams" type="Label" parent="main"]
anchor_left = 0.443359
anchor_top = 0.902778
anchor_right = 0.556641
anchor_bottom = 0.972222
theme = ExtResource( 6 )
text = "Hams:"
align = 1
valign = 1

[node name="smoker" type="TextureButton" parent="main"]
anchor_left = 0.832031
anchor_top = 0.729167
anchor_right = 0.910156
anchor_bottom = 0.868056
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="shopScreen" type="TabContainer" parent="main"]
visible = false
anchor_bottom = 1.0
margin_left = 20.0
margin_right = 520.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 1 )
custom_styles/tab_fg = ExtResource( 8 )
custom_styles/tab_disabled = ExtResource( 7 )
custom_styles/tab_bg = ExtResource( 7 )
custom_styles/panel = ExtResource( 7 )
tab_align = 0

[node name="Page 1" type="ColorRect" parent="main/shopScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 30.0
margin_right = -5.0
margin_bottom = -5.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="itemList" type="VBoxContainer" parent="main/shopScreen/Page 1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="autoSmoker" type="Button" parent="main/shopScreen/Page 1/itemList"]
margin_right = 39.0
margin_bottom = 21.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "buy"
script = ExtResource( 9 )

[node name="shopButton" type="Button" parent="main"]
margin_left = 50.0
margin_top = 660.0
margin_right = 151.0
margin_bottom = 707.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
toggle_mode = true
text = "Shop Button"

[node name="clickTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="main/smoker" to="." method="_on_smoker_pressed"]
[connection signal="pressed" from="main/shopScreen/Page 1/itemList/autoSmoker" to="." method="_on_autoSmoker_pressed"]
[connection signal="toggled" from="main/shopButton" to="." method="_on_shopButton_toggled"]
[connection signal="timeout" from="clickTimer" to="." method="_on_clickTimer_timeout"]
